Switch from anonymous classes  to carrier based StringTemplate implementation